--- a/Ethereum/交易流程/交易生命週期.md
+++ b/Ethereum/交易流程/交易生命週期.md
@@ -7,7 +7,11 @@ aliases: [Transaction Lifecycle, 交易生命週期概覽]
 
 ## 概述
 
-一筆 Ethereum 交易從使用者意圖到鏈上最終確認，經歷密鑰生成、交易構建、數位簽章、網路廣播、記憶池排隊、區塊打包、共識投票、狀態轉換等階段。每個階段都涉及特定的密碼學原語和協議機制。本筆記作為 Hub，串連整個流程。
+當你在錢包按下「發送」按鈕，背後發生了什麼？一筆 Ethereum 交易從你的指尖到最終不可逆轉地寫入區塊鏈，需要經過 8 個站點——密鑰生成、交易構建、數位簽章、網路廣播、記憶池排隊、區塊打包、共識投票、狀態轉換。理解這條路徑，就等於理解 Ethereum 的運作核心。
+
+舉個例子：你想轉 1 ETH 給朋友。錢包先用你的私鑰簽名（站 1-3），把交易送到網路上（站 4-5），一位驗證者把它打包進區塊（站 6），全網投票確認（站 7），最後你的餘額減少、朋友的餘額增加（站 8）。整個過程約 12-15 分鐘完成最終確認。
+
+本文作為 Hub，串連整個交易流程的 8 篇詳解。下方的流程圖和各階段摘要幫助你建立全局觀，再按需深入各站。
 
 ## 完整流程圖
 
