--- a/Ethereum/交易流程/交易廣播與驗證.md
+++ b/Ethereum/交易流程/交易廣播與驗證.md
@@ -7,7 +7,11 @@ aliases: [Transaction Broadcasting, 交易傳播, 交易驗證]
 
 ## 概述
 
-簽好的交易透過 JSON-RPC（`eth_sendRawTransaction`）提交給 Ethereum 節點，節點執行一系列驗證檢查後，將交易加入本地 [[記憶池]] 並透過 DevP2P gossip 協議傳播到其他 peer。每個收到交易的節點會獨立驗證，不信任傳播來源。
+交易簽好之後，怎麼讓全世界的節點都知道？Ethereum 使用一種類似「口耳相傳」的機制：你把交易送給一個節點，這個節點驗證無誤後轉告它的鄰居，鄰居再轉告鄰居的鄰居，幾秒之內交易就傳遍整個網路。這個過程叫做 gossip 協議（正式名稱是 DevP2P）。
+
+想像你在 MetaMask 點了「確認」——錢包把簽好的交易透過 JSON-RPC（`eth_sendRawTransaction`）送給一個節點。這個節點會先檢查：簽章對不對？nonce 正不正確？餘額夠不夠付 gas？全部通過才會把交易加入本地 [[記憶池]]，並開始向其他 peer 傳播。
+
+本文涵蓋交易的提交方式、節點的四層驗證流程（格式、簽章、狀態、費用），以及 P2P 傳播的機制與限制。
 
 ## 核心原理
 
