--- a/Ethereum/交易流程/交易構建.md
+++ b/Ethereum/交易流程/交易構建.md
@@ -7,7 +7,11 @@ aliases: [Transaction Construction, 交易組裝, 交易建構]
 
 ## 概述
 
-交易構建是將使用者意圖轉化為結構化資料的過程。需要填入 nonce、gas 參數、目標地址、金額、calldata 等欄位，並根據交易類型選擇對應的序列化方式（[[RLP 編碼]] 或 typed transaction envelope）。構建完成後的序列化資料將作為 [[交易簽名]] 的輸入。
+交易構建就是把「我要做什麼」翻譯成 Ethereum 網路能理解的格式。不論是轉 1 ETH 給朋友（簡單轉帳），還是在 Uniswap 上兌換代幣（合約呼叫），你都需要填好一組欄位——收件人、金額、手續費上限等——然後序列化成二進位資料，準備送去簽名。
+
+以轉帳為例：你的錢包會自動查詢你的 nonce（已發送幾筆交易）、估算 gas 費用、填入收件人地址和金額，然後打包成一筆 Type 2（EIP-1559）交易。如果是合約呼叫，`data` 欄位還會包含函數選擇器和參數編碼。
+
+本文涵蓋三種交易類型（Legacy / EIP-1559 / EIP-7702）的欄位結構、序列化方式（[[RLP 編碼]] 或 typed transaction envelope），以及常見的構建陷阱。
 
 ## 核心原理
 
@@ -92,11 +96,32 @@ $$\text{encoded} = \text{txType} \| \text{RLP}(\text{fields})$$
 
 ### Nonce 管理
 
-[[Nonce]] 是交易排序和防重放的關鍵：
+[[Nonce]] 是交易排序和防重放的關鍵。需要注意的是，nonce 在 Ethereum 中有兩種不同含義：
+
+| 類型 | Nonce 含義 | 遞增時機 | 查詢方式 |
+|------|-----------|---------|---------|
+| EOA nonce | 該帳戶已發送的交易數量 | 每筆交易執行時 +1 | `eth_getTransactionCount` |
+| 合約 nonce | 該合約已透過 CREATE 建立的子合約數量 | 每次 CREATE 時 +1 | 無直接 RPC，需查 state |
+
+交易構建時用的是 **EOA nonce**，規則如下：
 
 - 必須等於發送者已確認交易數量（`pending` 狀態下為包含 pending 的計數）
-- nonce 不連續的交易會卡在 mempool
-- 同一 nonce 的新交易可以替換舊的（需要更高 gas price）
+- nonce 不連續的交易會卡在 mempool（例如 nonce 5 還沒執行，nonce 6 就會等待）
+- 同一 nonce 的新交易可以替換舊的（需要更高 gas price，通常至少 +10%）
+
+合約 nonce 影響的是 `CREATE` opcode 產生的新合約地址（`address = keccak256(rlp([sender, nonce]))[12:]`），與交易構建無直接關係，但在分析合約部署時會遇到。
+
+### Gas 三個層次
+
+Gas 在交易流程的不同階段有不同含義，容易混淆。以下統一定義：
+
+| 層次 | 名稱 | 定義 | 決定者 |
+|------|------|------|--------|
+| 1 | Intrinsic gas | 交易本身的固定成本：21,000（基礎）+ calldata 成本（每個零 byte 4 gas，非零 byte 16 gas）+ access list 成本 | 協議規則 |
+| 2 | Execution gas | EVM 執行合約程式碼消耗的 gas（每個 opcode 有固定費用，SSTORE 最貴可達 20,000） | 合約邏輯 |
+| 3 | baseFee | 每單位 gas 的最低價格，由協議根據前一區塊的使用率動態調整（[[EIP-1559 費用市場]]） | 協議算法 |
+
+交易實際消耗的 gas = intrinsic gas + execution gas。使用者支付的費用 = 消耗的 gas * effectiveGasPrice。其中 baseFee 部分被銷毀，priority fee 部分歸 validator。
 
 ### Gas 估算
 
@@ -104,7 +129,7 @@ $$\text{encoded} = \text{txType} \| \text{RLP}(\text{fields})$$
 
 1. 呼叫 `eth_estimateGas` 取得估算值
 2. 加上 20-30% 的 buffer
-3. 純 ETH 轉帳固定為 21,000 gas
+3. 純 ETH 轉帳固定為 21,000 gas（只有 intrinsic gas，無 execution gas）
 
 ## 在 Ethereum 中的應用
 
