--- a/Ethereum/交易流程/交易生命週期.md
+++ b/Ethereum/交易流程/交易生命週期.md
@@ -13,6 +13,21 @@ aliases: [Transaction Lifecycle, 交易生命週期概覽]
 
 本文作為 Hub，串連整個交易流程的 8 篇詳解。下方的流程圖和各階段摘要幫助你建立全局觀，再按需深入各站。
 
+## 兩種帳戶：EOA vs 合約帳戶
+
+在深入交易流程前，需要先區分 Ethereum 的兩種帳戶，因為它們在每個階段的行為不同：
+
+| 特性 | EOA（Externally Owned Account） | 合約帳戶（Contract Account） |
+|------|------|------|
+| 控制方式 | 私鑰持有者 | 合約程式碼 |
+| 地址來源 | 公鑰經 [[Keccak-256]] 雜湊 | CREATE / CREATE2 計算 |
+| 能否發起交易 | 可以（只有 EOA 能發起） | 不能（只能被呼叫） |
+| 有無程式碼 | 無（EIP-7702 後可暫時委託） | 有（部署後不可變） |
+| Nonce 含義 | 已發送的交易數量 | 已建立的合約數量 |
+| 典型例子 | MetaMask 錢包地址 | Uniswap Router 合約 |
+
+> **關鍵要點**：所有交易都由 EOA 發起。合約帳戶只能在 EOA 的交易觸發下執行程式碼。EIP-7702（Pectra 升級，2025/5）模糊了這條界線，允許 EOA 暫時「借用」合約的程式碼。
+
 ## 完整流程圖
 
 ```mermaid
