--- a/Ethereum/交易流程/共識與最終性.md
+++ b/Ethereum/交易流程/共識與最終性.md
@@ -7,7 +7,11 @@ aliases: [Consensus and Finality, 共識機制, 最終確認性]
 
 ## 概述
 
-Ethereum PoS 的共識機制由兩個協議組成：[[LMD GHOST]] 負責 fork choice（選擇鏈頭），[[Casper FFG]] 負責 finality（最終確認）。驗證者透過 [[Attestation]] 同時為兩者投票。一筆交易被包含在區塊後，經過約 2 個 epoch（~12.8 分鐘），checkpoint 被 finalize，該交易獲得不可逆轉的最終性。
+區塊打包完成後，怎麼確保它不會被推翻？這就是共識與最終性要解決的問題。Ethereum 使用兩個協議搭配運作：[[LMD GHOST]] 負責即時決定「目前哪條鏈最長」（fork choice），[[Casper FFG]] 負責在較長時間尺度上蓋棺定論——一旦 finalize，交易就不可逆轉。
+
+一個 epoch 是 32 個 slot（約 6.4 分鐘）。每個 epoch 結束時，如果超過 2/3 的驗證者投票支持某個 checkpoint，該 checkpoint 就會被 justify；當連續兩個 checkpoint 都被 justify，前一個就會被 finalize。正常情況下，一筆交易從被打包到最終確認約需 2 個 epoch（~12.8 分鐘）。
+
+本文涵蓋 LMD GHOST 的 fork choice 規則、Casper FFG 的 justify/finalize 流程，以及非正常情況（如 inactivity leak）下的行為。
 
 ## 核心原理
 
