--- a/Ethereum/交易流程/區塊生產.md
+++ b/Ethereum/交易流程/區塊生產.md
@@ -7,7 +7,13 @@ aliases: [Block Production, 區塊打包, 出塊]
 
 ## 概述
 
-在 PoS Ethereum 中，[[Beacon Chain]] 透過 [[RANDAO]] 偽隨機機制為每個 slot（12 秒）選出一個 Proposer（[[Validators|驗證者]]）。Proposer 從 [[記憶池]] 挑選交易，在 EVM 中執行，組裝出完整的區塊（包含 execution payload 和 consensus 資料），然後廣播給網路進行 [[共識與最終性|共識投票]]。
+交易在記憶池裡等待被打包——誰來決定哪些交易進入下一個區塊？在 Ethereum 轉為 Proof of Stake（2022 年 9 月 The Merge）之後，這個角色從礦工變成了驗證者。每 12 秒（一個 slot），系統從數十萬驗證者中隨機選出一位 Proposer，由他負責組裝區塊。
+
+具體來說：[[Beacon Chain]] 透過 [[RANDAO]] 偽隨機機制選出 Proposer，Proposer 從 [[記憶池]] 挑選手續費最高的交易，在 EVM 中依序執行，計算出新的 state root，組裝成完整區塊後廣播給網路。
+
+本文涵蓋 Slot/Epoch 時間結構、Proposer 選擇機制、區塊組裝流程，以及 MEV 和 PBS（Proposer-Builder Separation）的影響。
+
+> **時間單位速查**：為避免與 Execution Layer 的 block number 混淆，Consensus Layer 使用 slot 和 epoch 計時。詳見下方對照表。
 
 ## 核心原理
 
