--- a/Ethereum/交易流程/密鑰生成與帳戶創建.md
+++ b/Ethereum/交易流程/密鑰生成與帳戶創建.md
@@ -7,7 +7,11 @@ aliases: [Key Generation, 帳戶創建, 密鑰對生成]
 
 ## 概述
 
-Ethereum 帳戶的建立完全是離線密碼學操作：使用 [[CSPRNG]] 產生 256-bit 隨機私鑰，透過 [[secp256k1]] 橢圓曲線標量乘法得到公鑰，再經 [[Keccak-256]] 雜湊取最後 20 bytes 作為地址。帳戶不需要鏈上註冊，任何人都能獨立產生。
+與傳統銀行不同，Ethereum 不需要任何人幫你「開戶」——你自己就是銀行。只要在本機產生一組隨機數字（私鑰），就能透過數學運算推導出公鑰和地址，完成帳戶創建。整個過程離線完成，不需要連上任何伺服器。
+
+想像你要收朋友轉來的 ETH：你先用錢包產生一個帳戶，拿到一串 `0x...` 開頭的地址，把它貼給朋友就行了。這個地址背後的密鑰對（私鑰 + 公鑰）是用密碼學安全的隨機數產生器（[[CSPRNG]]）和 [[secp256k1]] 橢圓曲線計算出來的，再經 [[Keccak-256]] 雜湊得到地址。
+
+本文涵蓋私鑰生成的安全要求、公鑰推導的數學原理、地址格式（EIP-55 校驗），以及 EOA 與合約帳戶的區別。
 
 ## 核心原理
 
