--- a/Ethereum/交易流程/狀態轉換.md
+++ b/Ethereum/交易流程/狀態轉換.md
@@ -7,7 +7,11 @@ aliases: [State Transition, 狀態轉移, EVM 執行]
 
 ## 概述
 
-狀態轉換是 Ethereum 的核心計算過程：給定當前世界狀態 $\sigma$ 和一筆交易 $T$，EVM 執行後產生新狀態 $\sigma'$。所有帳戶餘額、合約儲存、nonce 的變更都反映在 [[Merkle Patricia Trie]] 中，新的 state root 寫入 [[區塊 Header]]。這是交易生命週期的最後一步 -- 交易的效果在此刻實際生效。
+假設 Alice 轉 1 ETH 給 Bob——交易被共識確認後，真正改變餘額的那一刻就是狀態轉換。Alice 的帳戶餘額減少 1 ETH 加上 gas 費用，Bob 的帳戶餘額增加 1 ETH，Alice 的 nonce 加 1。這些變更寫入 [[Merkle Patricia Trie]]，產生新的 state root，記錄在 [[區塊 Header]] 中。
+
+狀態轉換是交易生命週期的最後一站——前面 7 個步驟（密鑰、構建、簽名、廣播、記憶池、打包、共識）都是為了安全地走到這裡。不論是簡單轉帳還是複雜的合約呼叫，最終都歸結為：給定當前狀態 $\sigma$ 和交易 $T$，EVM 執行後產生新狀態 $\sigma'$。
+
+本文涵蓋狀態轉換函數的定義、交易執行的詳細步驟（預處理、EVM 執行、後處理），以及 Receipt 和事件日誌的產生。
 
 ## 核心原理
 
