--- a/Ethereum/交易流程/記憶池.md
+++ b/Ethereum/交易流程/記憶池.md
@@ -150,6 +150,10 @@ async function getMempoolStatus() {
 }
 ```
 
+## 下一步：從記憶池到區塊
+
+交易在記憶池中等待的時間結束於被 proposer 選中的那一刻。每個 slot（12 秒），Beacon Chain 指定一位 validator 作為 proposer，由其從本地記憶池中挑選交易、組裝成 Execution Payload，打包進 Beacon Block 並廣播到全網。Proposer 如何決定收錄哪些交易？通常是按 priority fee 排序，但 MEV 的存在讓這個過程更加複雜。詳見[[區塊生產]]。
+
 ## 相關概念
 
 - [[交易生命週期]] - 本筆記是流程第五步
