--- a/Ethereum/區塊與共識/區塊結構.md
+++ b/Ethereum/區塊與共識/區塊結構.md
@@ -7,18 +7,24 @@ aliases: [Block Structure, 區塊, Block]
 
 ## 概述
 
-Ethereum 自 The Merge 後採用雙層區塊結構：Consensus Layer（CL）負責共識邏輯，Execution Layer（EL）負責交易執行與狀態轉換。一個完整的區塊由 Beacon Block 包裹 Execution Payload 組成，兩層各自維護不同的資料結構與驗證邏輯。
+區塊是 Ethereum 上「一批交易打包確認」的最小單位。每 12 秒產生一個區塊，裡面記錄了這段期間內所有被選中的交易及其執行結果。理解區塊的結構，是理解交易如何從「被送出」到「被確認」的關鍵。
+
+當你在錢包按下「發送」後，交易最終會被某位 validator 打包進一個區塊。這個區塊包含兩個部分：共識層（Consensus Layer）負責決定「誰有權出塊、區塊是否有效」，執行層（Execution Layer）負責實際跑交易、更新餘額。兩層分開運作，再透過 Engine API 溝通。
+
+本文將說明為什麼 Ethereum 採用這種雙層架構、Beacon Block 與 Execution Payload 各包含哪些欄位，以及區塊從組裝到確認的完整流程。
 
 ## 核心原理
 
 ### 雙層架構
 
-The Merge 前，區塊是單一結構，包含 header、transactions、ommers。合併後拆分成：
+為什麼要拆成兩層？2022 年 The Merge 之前，區塊是單一結構。合併後 Ethereum 從 PoW 轉向 PoS，共識邏輯和交易執行的複雜度都大幅增加。拆分讓兩邊可以獨立升級和優化：
 
-- **Beacon Block**：共識層容器，包含 slot、proposer index、parent root、state root、body
-- **Execution Payload**：嵌在 Beacon Block body 裡的執行層資料，等同於舊的區塊內容
+- **Beacon Block**：共識層容器，攜帶 slot 編號、proposer 身分、父區塊引用等共識資訊
+- **Execution Payload**：嵌在 Beacon Block body 裡的執行層資料，包含實際的交易列表與執行結果
 
-這種設計讓共識邏輯與執行邏輯解耦，CL 客戶端（如 Prysm、Lighthouse）和 EL 客戶端（如 Geth、Nethermind）透過 Engine API 溝通。
+CL 客戶端（如 Prysm、Lighthouse）和 EL 客戶端（如 Geth、Nethermind）各自獨立運行，透過 Engine API 交換資料。
+
+> 區塊結構的欄位與[[區塊 Header]]有密切對應關係。本文的 Execution Payload 表格涵蓋完整欄位，區塊 Header 則側重 RLP 編碼順序與歷史欄位的演變。兩篇互補閱讀效果最佳。
 
 ### Beacon Block 結構
 
