--- a/Ethereum/交易流程/區塊生產.md
+++ b/Ethereum/交易流程/區塊生產.md
@@ -17,12 +17,17 @@ aliases: [Block Production, 區塊打包, 出塊]
 
 ## 核心原理
 
-### Slot 與 Epoch
+### Block Number vs Slot vs Epoch
 
-| 概念 | 定義 |
-|------|------|
-| Slot | 12 秒，區塊生產的最小時間單位 |
-| Epoch | 32 slots = 384 秒（6.4 分鐘） |
+Ethereum 有兩套平行的計時系統，分別屬於 Execution Layer（EL）和 Consensus Layer（CL）。在閱讀文件或查詢鏈上資料時容易混淆：
+
+| 概念 | 所屬層 | 定義 | 間隔 | 從何時開始計數 |
+|------|--------|------|------|-------------|
+| Block number | EL | 執行層區塊的序號，從 genesis 開始遞增 | ~12 秒（PoS 後等於 slot 間隔） | Genesis（0） |
+| Slot | CL | 共識層的時間槽，每 12 秒一個 | 固定 12 秒 | Beacon Chain genesis（2020/12/1） |
+| Epoch | CL | 32 個 slot 的集合 | 384 秒（6.4 分鐘） | 同上 |
+
+> **注意**：Block number 和 slot number 不相等。The Merge 發生在 block 15537393 但 slot 4700013。此外，slot 可以為空（missed slot），此時不產生 EL 區塊，block number 不遞增但 slot number 仍遞增。
 
 每個 slot 有一個 proposer 和一個 committee（負責 attestation）。Proposer 在 slot 開始時有 4 秒的窗口廣播區塊。
 
